--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "fake": "SKIMURA BOT",
     "lolkey": "065d25cd3a4375c3760691cb",
     "sesidInsta": "default",
-    "sessionName": "Aulia",
+    "sessionName": "AuliaChan",
     "txtDonasi": "GOPAY : 085821676621\nPulsa : 085821676621\n\n「 SHOP WA BOT AULIACHAN 」\n\nUSER PREMIUM\n\n• 1 Bulan : 15k\n• 2 Bulan : 25k\n• 3 Bulan : 35k\n• PERMANEN LIFETIME : 50K\n\n\nSEWA BOT:\n\n• 1 Bulan : 10k\n• 2 Bulan : 20k\n• 3 Bulan : 30k\n• PERMANEN LIFETIME : 45K\n\nMAU BELI USERPREMIUM? CHAT OWNER",
     "gcount": {
         "prem": 99999,
