--- a/config.json
+++ b/config.json
@@ -1,19 +1,18 @@
 {
     "ownerNumber": "6285821676621@s.whatsapp.net",
-    "ownerName": "Aulia Rahman",
-    "limitCount": 50,
-    "gamewaktu": 90,
-    "botName": "SKIMURA BOT",
-    "pathImg": "./media/image.jpeg",
-    "cr": "SKIMURA-BOT",
-    "fake": "SKIMURA BOT",
-    "lolkey": "065d25cd3a4375c3760691cb",
+    "ownerName": "aulia rahman",
+    "limitCount": 30,
+    "gamewaktu": 60,
+    "botName": "SKIMURA-BOT",
+    "pathImg": "./media/image.jpg",
+    "apikey": "REGISTER DI LOLHUMAN",
+    "fake": "SKIMURA-BOTZ VERIFIED",
     "sesidInsta": "default",
-    "sessionName": "AuliaChan",
-    "txtDonasi": "GOPAY : 085821676621\nPulsa : 085821676621\n\n「 SHOP WA BOT AULIACHAN 」\n\nUSER PREMIUM\n\n• 1 Bulan : 15k\n• 2 Bulan : 25k\n• 3 Bulan : 35k\n• PERMANEN LIFETIME : 50K\n\n\nSEWA BOT:\n\n• 1 Bulan : 10k\n• 2 Bulan : 20k\n• 3 Bulan : 30k\n• PERMANEN LIFETIME : 45K\n\nMAU BELI USERPREMIUM? CHAT OWNER",
+    "sessionName": "AuliaNia",
+    "txtDonasi": "GOPAY/PULSA : 085821676621\nTrakteer : https://trakteer.id/gaadacuk\nSaweeria : https://saweria.co/gaadacuk\nPulsa : 085821676621",
     "gcount": {
-        "prem": 99999,
-        "user": 50
+        "prem": 40,
+        "user": 20
     },
     "emote":{
         "free": "◽",
