--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": "6285821676621@s.whatsapp.net",
-    "ownerName": "aulia rahman",
+    "ownerNumber": "6285724335253@s.whatsapp.net",
+    "ownerName": "Owner",
     "limitCount": 30,
     "gamewaktu": 60,
     "botName": "SKIMURA-BOT",
